--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,11 +17,13 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: #1f2a37;
+  color: white;
 }
+
+header {
+  backdrop-filter: blur(20px);
+  border: 2px solid rgba(255, 255, 255, 0.125);
+  
+}
+
